Separated into multiple pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Bilesh Ganguly - Software Engineer</title>
+		<title>Bilesh Ganguly - Technology Lead</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="inner">
-				<a href="https://bileshg.github.io" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+				<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<h1>I am <strong>Bilesh</strong>, an experienced<br />
 				<strong>Software Engineer</strong> specializing<br />
 				in the <strong>Data Integration</strong> domain</h1>
@@ -29,254 +29,61 @@
 				<header class="major">
 					<h1>About Me</h1>
 				</header>
-				<p>
-					Hi, I'm <strong>Bilesh Ganguly</strong>, a <strong>Technology Lead</strong> with over <strong>8 years of experience</strong> in the IT
-					industry, currently specializing in	the data integration domain. Throughout my career, I have worked on a wide
-					variety of projects and have gained	proficiency in various tools such as SnapLogic, Salesforce, and Reltio.
-				</p>
-				<p>
-					I started my career as a Java developer, which helped me develop a solid understanding of the software development
-					lifecycle. Over the years, I have honed my programming and debugging skills in Python, Java, and JavaScript.
-				</p>
-				<p>	
-					I hold a <strong>Master's degree in Computer Science</strong> from <strong>St. Xavier's College, Kolkata</strong>,
-					which has given me a strong	foundation in software development principles.
-				</p>
-				<p>										
-					I am passionate about technology and delivering high-quality solutions while staying up-to-date with the latest
-					trends. I am always eager to collaborate with others and take on new challenges to help drive business success.
-				</p>
-				
+				<section>
+					<p>
+						Hi, I'm <strong>Bilesh Ganguly</strong>, a <strong>Technology Lead</strong> with over <strong>8 years of experience</strong> in the IT
+						industry, currently specializing in	the data integration domain. Throughout my career, I have worked on a wide
+						variety of projects and have gained	proficiency in various tools such as SnapLogic, Salesforce, and Reltio.
+					</p>
+					<p>
+						I started my career as a Java developer, which helped me develop a solid understanding of the software development
+						lifecycle. Over the years, I have honed my programming and debugging skills in Python, Java, and JavaScript.
+					</p>
+					<p>	
+						I hold a <strong>Master's degree in Computer Science</strong> from <strong>St. Xavier's College, Kolkata</strong>,
+						which has given me a strong	foundation in software development principles.
+					</p>
+					<p>										
+						I am passionate about technology and delivering high-quality solutions while staying up-to-date with the latest
+						trends. I am always eager to collaborate with others and take on new challenges to help drive business success.
+					</p>
+				</section>	
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/bilesh-ganguly/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<li><a href="https://github.com/bileshg" class="icon brands fa-github"><span class="label">Github</span></a></li>
 					<li><a href="https://stackoverflow.com/users/6042824/bilesh-ganguly" class="icon brands fa-stack-overflow"><span class="label">StackOverflow</span></a></li>
+					<li><a href="https://trailblazer.me/id/imbilesh" class="icon brands fa-salesforce"><span class="label">Salesforce</span></a></li>		
 				</ul>
+
 			</section>
 
-			<section id="experience">
+			<section>
 				<header class="major">
-					<h2>Experience</h2>
+					<h1>Details</h1>
 				</header>
-				<section>
-					<h4>
-						<strong><a href="https://2pirad.com">TwoPiRadian Infotech</a></strong> - <i>Technology Lead</i><br/>
-						<span class="date">March 2016 - Present</span><br>
-					</h4>
-					<p>Design, develop and refine data integration solutions</p>
-					<p>
-						My current responsibilities involve:
-						<ul>
-							<li>Operational accountability for the existing technology footprint, consisting of various cloud applications,
-							scripts, integrations, and reports</li>
-							<li>Function as a senior member of an agile team and help drive consistent development practices</li>
-							<li>Work with product owners and business users to determine and document project requirements</li>
-							<li>Partner with the Project Manager, QA Lead, and Ops team to design solutions and release code</li>
-							<li>Liaising with team members, management, and clients to ensure projects are completed as per standard</li>
-							<li>Provide support and escalation for investigations and incident management</li>
-						</ul>
-					</p>
-					<p>
-						Previously, I have worked on building data integration solutions for the Reltio Cloud MDM Platform
-						using SnapLogic iPaaS and creating tools for providing an additional layer of functionality to the Reltio
-						Cloud MDM. Following are some of the highlights:
-						<ul>
-							<li>Created loading pipelines for loading data into Reltio Cloud MDM from various source systems like MySQL,
-							Oracle, and PostgreSQL</li>
-							<li>Created extraction pipelines to extract data from Reltio to PostgreSQL</li>
-							<li>Wrote and optimized SQL queries for fetching the data to be loaded</li>
-							<li>Created an automatic configuration generation tool which is a command-line tool that, when provided with
-							a data model, can generate a Reltio configuration against it</li>
-							<li>Created an automated configuration testing framework to check if a Reltio configuration was created as
-							per the provided business requirements</li>
-							<li>Created Reltio configurations based on business requirements</li>
-						</ul>
-					</p>
-					<p>
-						Additionally, I have developed pipelines (in SnapLogic) that act
-						as API leveraging ULTRA Tasks to serve relevant	data from MDM to be consumed by various downstream systems
-						and applications. Worked on a Python-based match engine that when configured for a certain implemented MDM
-						system can intelligently merge a large number of potential matches by itself without any manual intervention.
-					</p>
-				</section>
-				<section>
-					<h4>
-						<strong>RedoQ</strong> - <i>Java Developer</i><br/>
-						<span class="date">February 2015 - February 2016</span><br>
-					</h4>
-					<p><i>Designed and developed platform-independent desktop applications using JavaFX.</i></p>
-				</section>
-			</section>
-
-			<section id="education">
-				<h2>Education</h2>
 				<div class="row">
 					<article class="col-6 col-12-xsmall work-item">
-						<strong>St. Xavier's College, Kolkata</strong><br/>
-						Master of Science (M.Sc.) - Computer Science<br/>
-						<span class="date">2011 - 2013</span>								
+						<a href="experience.html" class="image fit thumb"><img src="images/experience.png" alt="" /></a>
+						<h2>Experience</h2>
 					</article>
 					<article class="col-6 col-12-xsmall work-item">
-						<strong>West Bengal State University, Kolkata</strong><br/>
-						Bachelor of Science (B.Sc.) - Computer Science<br/>
-						<span class="date">2008 - 2011</span>								
+						<a href="education.html" class="image fit thumb"><img src="images/education.png" alt="" /></a>
+						<h2>Education</h2>
 					</article>
 				</div>
 			</section>
 
-			<section id="certificates">
-				<h2>Certificates</h2>
-				<div class="row">
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://verify.skilljar.com/c/m58tp6f44ak7"><strong>Enterprise Automation Professional</strong></a><br/>
-						SnapLogic<br/>
-						<span class="date">Issued March 2022</span>								
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://verify.skilljar.com/c/xb93rduecvzp"><strong>SnapLogic Integrator</strong></a><br/>
-						SnapLogic<br/>
-						<span class="date">Issued March 2022</span>								
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://verify.skilljar.com/c/pv2ja7vvaa5t"><strong>Automation Pro II</strong></a><br/>
-						Workato<br/>
-						<span class="date">Issued January 2022</span>								
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://verify.skilljar.com/c/322j53ypu6xs"><strong>Automation Pro I</strong></a><br/>
-						Workato<br/>
-						<span class="date">Issued January 2022</span>								
-					</article>
-				</div>
-			</section>
-
-			<section id="courses">
-				<h2>Courses</h2>
-				<div class="row">
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://coursera.org/share/0bcf72868467857c883fbf95c448db5c"><strong>Machine Learning</strong></a><br/>
-						Coursera<br/>
-						<span class="date">Issued July 2021</span>								
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://www.coursera.org/account/accomplishments/verify/G3H2SAS3XPGB"><strong>R Programming</strong></a><br/>
-						Coursera<br/>
-						<span class="date">Issued February 2017</span>								
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://www.coursera.org/account/accomplishments/verify/B5JB473PD9S9"><strong>The Data Scientist's Toolbox</strong></a><br/>
-						Coursera<br/>
-						<span class="date">Issued September 2016</span>								
-					</article>
-				</div>
-			</section>
-
-			<section id="udemy">
-				<h2>Udemy Courses</h2>
-				<div class="row">
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://ude.my/UC-41ac1430-1469-46b7-b751-6754869ff989/"><strong>The Complete Salesforce Development Course</strong></a><br/>
-						Udemy<br/>
-						<span class="date">Issued February 2023</span>								
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://ude.my/UC-c4d9b686-e989-479d-99d9-b937df83e8fb/"><strong>Data Integration Guide</strong></a><br/>
-						Udemy<br/>
-						<span class="date">Issued February 2023</span>								
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://ude.my/UC-9ea289d1-2ec9-4826-92e7-667740767869/"><strong>Data Integration Fundamentals</strong></a><br/>
-						Udemy<br/>
-						<span class="date">Issued January 2023</span>								
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://ude.my/UC-e6be881f-dc42-4c74-954e-2086de723304"><strong>Salesforce Integration with External Systems</strong></a><br/>
-						Udemy<br/>
-						<span class="date">Issued April 2022</span>								
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://ude.my/UC-346ebc18-0010-4b94-b6f3-89427d4b4382/"><strong>Salesforce Lightning Flow Builder - The Complete Guide</strong></a><br/>
-						Udemy<br/>
-						<span class="date">Issued December 2021</span>								
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://ude.my/UC-6aa17788-f95a-4a60-a9c5-608b9f82f707/"><strong>Business Analysis Fundamentals</strong></a><br/>
-						Udemy<br/>
-						<span class="date">Issued July 2021</span>								
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://ude.my/UC-51d3e8cf-b64d-4022-85ab-524de5c0fcff"><strong>The Complete Hands-On Introduction to Apache Airflow</strong></a><br/>
-						Udemy<br/>
-						<span class="date">Issued June 2021</span>								
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://ude.my/UC-1caabd6b-0bbf-4e08-9eea-7867d7d7e797/"><strong>Natural Language Processing with Python</strong></a><br/>
-						Udemy<br/>
-						<span class="date">Issued April 2021</span>								
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://ude.my/UC-0608ce9f-4646-44d9-a2c9-cd88c4a9d5d1/"><strong>Azure Data Factory: Hands-On Practical Course</strong></a><br/>
-						Udemy<br/>
-						<span class="date">Issued December 2020</span>								
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://ude.my/UC-c53d2520-7b98-4b46-9695-f77259949908/"><strong>MuleSoft (Mule4) for Beginners/Developers</strong></a><br/>
-						Udemy<br/>
-						<span class="date">Issued December 2020</span>								
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="https://ude.my/UC-dc34f6ff-0189-4292-ac92-4749f5bfac7b/"><strong>MATLAB &amp; Octave in Jupyter Notebook</strong></a><br/>
-						Udemy<br/>
-						<span class="date">Issued December 2020</span>								
-					</article>
-				</div>
-			</section>
-
-			<section id="kaggle">
-				<h2>Kaggle Courses</h2>
-				<ul>
-					<li><a href="https://www.kaggle.com/learn/certification/bileshganguly/intro-to-deep-learning">Intro to Deep Learning</a></li>
-					<li><a href="https://www.kaggle.com/learn/certification/bileshganguly/natural-language-processing">Natural Language Processing</a></li>
-					<li><a href="https://www.kaggle.com/learn/certification/bileshganguly/intermediate-machine-learning">Intermediate Machine Learning</a></li>
-					<li><a href="https://www.kaggle.com/learn/certification/bileshganguly/intro-to-machine-learning">Intro to Machine Learning</a></li>
-					<li><a href="https://www.kaggle.com/learn/certification/bileshganguly/advanced-sql">Advanced SQL</a></li>
-					<li><a href="https://www.kaggle.com/learn/certification/bileshganguly/intro-to-sql">Intro to SQL</a></li>
-					<li><a href="https://www.kaggle.com/learn/certification/bileshganguly/data-cleaning">Data Cleaning</a></li>
-					<li><a href="https://www.kaggle.com/learn/certification/bileshganguly/pandas">Pandas</a></li>
-					<li><a href="https://www.kaggle.com/learn/certification/bileshganguly/python">Python</a></li>
-				</ul>
-				<ul class="actions">
-					<li><a href="https://www.kaggle.com/bileshganguly" class="button">Kaggle Profile</a></li>
-				</ul>				
-			</section>
-
-			<section id="hackerrank">
-				<h2>Hackerrank Verified Skills</h2>
-				<ul>
-					<li><a href="https://www.hackerrank.com/certificates/cc03006cebeb">Python (Intermediate)</a></li>
-					<li><a href="https://www.hackerrank.com/certificates/e56ede8c31b2">Python (Basic)</a></li>
-					<li><a href="https://www.hackerrank.com/certificates/5673601651e9">SQL (Intermediate)</a></li>
-					<li><a href="https://www.hackerrank.com/certificates/f3c5b80bfc09">SQL (Basic)</a></li>
-					<li><a href="https://www.hackerrank.com/certificates/e5aa48cfbabe">Problem Solving (Basic)</a></li>
-					<li><a href="https://www.hackerrank.com/certificates/643514af1e24">Java (Basic)</a></li>
-				</ul>
-				<ul class="actions">
-					<li><a href="https://www.hackerrank.com/bileshg" class="button">Hackerrank Profile</a></li>
-				</ul>				
-			</section>
-			
-
-			<!-- Seven -->
-			<section id="seven">
+			<section id="flairs">
+				<header class="major">
+					<h1>Flairs</h1>
+				</header>
 				<ul class="icons">
 					<li>
-						<img src="https://stackoverflow.com/users/flair/6042824.png" width="215" height="60" alt="profile for Bilesh Ganguly at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Bilesh Ganguly at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+						<img src="https://stackoverflow.com/users/flair/6042824.png" width="215" height="60" alt="Profile for Bilesh Ganguly at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Bilesh Ganguly at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
 					</li>
 					<li>
-						<img src="https://stackexchange.com/users/flair/8011176.png" width="215" height="60" alt="profile for Bilesh Ganguly on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Bilesh Ganguly on Stack Exchange, a network of free, community-driven Q&amp;A sites">
+						<img src="https://stackexchange.com/users/flair/8011176.png" width="215" height="60" alt="Profile for Bilesh Ganguly on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Bilesh Ganguly on Stack Exchange, a network of free, community-driven Q&amp;A sites">
 					</li>
-				</ul>
-				<ul class="icons">
 					<li>
 						<img src="https://www.codeabbey.com/index/user_banner/bileshganguly.png" width="215" height="60" alt="CodeAbbey">
 					</li>
