--- a/index.html
+++ b/index.html
@@ -5,121 +5,234 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Bilesh Ganguly - Technology Lead</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-		<header id="header">
-			<div class="inner">
-				<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1>I am <strong>Bilesh</strong>, an experienced<br />
-				<strong>Software Engineer</strong> specializing<br />
-				in the <strong>Data Integration</strong> domain</h1>
-			</div>
-		</header>
+<head>
+	<title>Bilesh Ganguly - Technology Lead</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-		<div id="main">
+<body class="is-preload">
 
-			<section id="about">
-				<header class="major">
-					<h1>About Me</h1>
-				</header>
-				<section>
-					<p>
-						Hi, I'm <strong>Bilesh Ganguly</strong>, a <strong>Technology Lead</strong> with over <strong>8 years of experience</strong> in the IT
-						industry, currently specializing in	the data integration domain. Throughout my career, I have worked on a wide
-						variety of projects and have gained	proficiency in various tools such as SnapLogic, Salesforce, and Reltio.
-					</p>
-					<p>
-						I started my career as a Java developer, which helped me develop a solid understanding of the software development
-						lifecycle. Over the years, I have honed my programming and debugging skills in Python, Java, and JavaScript.
-					</p>
-					<p>	
-						I hold a <strong>Master's degree in Computer Science</strong> from <strong>St. Xavier's College, Kolkata</strong>,
-						which has given me a strong	foundation in software development principles.
-					</p>
-					<p>										
-						I am passionate about technology and delivering high-quality solutions while staying up-to-date with the latest
-						trends. I am always eager to collaborate with others and take on new challenges to help drive business success.
-					</p>
-				</section>	
-				<ul class="icons">
-					<li><a href="https://www.linkedin.com/in/bilesh-ganguly/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/bileshg" class="icon brands fa-github"><span class="label">Github</span></a></li>
-					<li><a href="https://stackoverflow.com/users/6042824/bilesh-ganguly" class="icon brands fa-stack-overflow"><span class="label">StackOverflow</span></a></li>
-					<li><a href="https://trailblazer.me/id/imbilesh" class="icon brands fa-salesforce"><span class="label">Salesforce</span></a></li>		
-				</ul>
-
-			</section>
-
-			<section>
-				<header class="major">
-					<h1>Details</h1>
-				</header>
-				<div class="row">
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="experience.html" class="image fit thumb"><img src="images/experience.png" alt="" /></a>
-						<h2>Experience</h2>
-					</article>
-					<article class="col-6 col-12-xsmall work-item">
-						<a href="education.html" class="image fit thumb"><img src="images/education.png" alt="" /></a>
-						<h2>Education</h2>
-					</article>
-				</div>
-			</section>
-
-			<section id="flairs">
-				<header class="major">
-					<h1>Flairs</h1>
-				</header>
-				<ul class="icons">
-					<li>
-						<img src="https://stackoverflow.com/users/flair/6042824.png" width="215" height="60" alt="Profile for Bilesh Ganguly at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Bilesh Ganguly at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
-					</li>
-					<li>
-						<img src="https://stackexchange.com/users/flair/8011176.png" width="215" height="60" alt="Profile for Bilesh Ganguly on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Bilesh Ganguly on Stack Exchange, a network of free, community-driven Q&amp;A sites">
-					</li>
-					<li>
-						<img src="https://www.codeabbey.com/index/user_banner/bileshganguly.png" width="215" height="60" alt="CodeAbbey">
-					</li>
-					<li>
-						<img src="https://projecteuler.net/profile/bileshg.png" width="215" height="60" alt="Project Euler">
-					</li>
-				</ul>		
-			</section>
-
+	<!-- Header -->
+	<header id="header">
+		<div class="inner">
+			<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<h1>I'm <strong>Bilesh Ganguly</strong>, a<br />
+				seasoned <strong>Software Engineer</strong><br />
+				specializing in <strong>DI & MDM</strong>
+			</h1>
 		</div>
+	</header>
 
-		<!-- Footer -->
-		<footer id="footer">
-			<div class="inner">
-				<ul class="icons">
-					<li><a href="https://www.linkedin.com/in/bilesh-ganguly/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/bileshg" class="icon brands fa-github"><span class="label">Github</span></a></li>
-					<li><a href="https://stackoverflow.com/users/6042824/bilesh-ganguly" class="icon brands fa-stack-overflow"><span class="label">StackOverflow</span></a></li>
-					<li><a href="https://stackexchange.com/users/8011176/bilesh-ganguly" class="icon brands fa-stack-exchange"><span class="label">StackExchange</span></a></li>
-					<li><a href="https://trailblazer.me/id/imbilesh" class="icon brands fa-salesforce"><span class="label">Salesforce</span></a></li>
-					<li><a href="https://twitter.com/BileshGanguly" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://www.instagram.com/bileshganguly/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>				
+	<div id="main">
+
+		<section id="about">
+			<header class="major">
+				<h1>About Me</h1>
+			</header>
+			<section>
+				<p>
+					Hi, I am <strong>Bilesh Ganguly</strong>, a <strong>Technology Lead</strong> with over <strong>9
+						years of experience</strong> in the IT
+					industry, currently specializing in the data integration domain. Throughout my career, I have worked
+					on a wide
+					variety of projects and have gained proficiency in various tools such as SnapLogic, Salesforce, and
+					Reltio.
+				</p>
+				<p>
+					I started my career as a Java developer, which helped me develop a solid understanding of the
+					software development
+					lifecycle. Over the years, I have honed my programming and debugging skills in Python, Java, and
+					JavaScript.
+				</p>
+				<p>
+					I hold a <strong>Master's degree in Computer Science</strong> from <strong>St. Xavier's College,
+						Kolkata</strong>,
+					which has given me a strong foundation in software development principles.
+				</p>
+				<p>
+					I am passionate about technology and delivering high-quality solutions while staying up-to-date with
+					the latest
+					trends. I am always eager to collaborate with others and take on new challenges to help drive
+					business success.
+				</p>
+			</section>
+
+		</section>
+
+		<section id="experience">
+
+			<header class="major">
+				<h1>Experience</h1>
+			</header>
+			<section>
+				<header>
+					<h2><a href="https://2pirad.com">TwoPiRadian Infotech</a></h2>
+					<p><i>Technology Lead</i><br />
+						<span class="date">March 2016 - Present</span>
+					</p>
+				</header>
+				<p><i>Design, develop and refine data integration solutions</i></p>
+				<p>
+					My current responsibilities involve:
+				<ul>
+					<li>Operational accountability for the existing technology footprint, consisting of various cloud
+						applications,
+						scripts, integrations, and reports</li>
+					<li>Function as a senior member of an agile team and help drive consistent development practices
+					</li>
+					<li>Work with product owners and business users to determine and document project requirements</li>
+					<li>Partner with the Project Manager, QA Lead, and Ops team to design solutions and release code
+					</li>
+					<li>Liaising with team members, management, and clients to ensure projects are completed as per
+						standard</li>
+					<li>Provide support and escalation for investigations and incident management</li>
 				</ul>
-				<ul class="copyright">
-					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</p>
+				<p>
+					Previously, I have worked on building data integration solutions for the Reltio Cloud MDM Platform
+					using SnapLogic iPaaS and creating tools for providing an additional layer of functionality to the
+					Reltio
+					Cloud MDM. Following are some of the highlights:
+				<ul>
+					<li>Created loading pipelines for loading data into Reltio Cloud MDM from various source systems
+						like MySQL,
+						Oracle, and PostgreSQL</li>
+					<li>Created extraction pipelines to extract data from Reltio to PostgreSQL</li>
+					<li>Wrote and optimized SQL queries for fetching the data to be loaded</li>
+					<li>Created an automatic configuration generation tool which is a command-line tool that, when
+						provided with
+						a data model, can generate a Reltio configuration against it</li>
+					<li>Created an automated configuration testing framework to check if a Reltio configuration was
+						created as
+						per the provided business requirements</li>
+					<li>Created Reltio configurations based on business requirements</li>
 				</ul>
-			</div>
-		</footer>
+				</p>
+				<p>
+					Additionally, I have developed pipelines (in SnapLogic) that act
+					as API leveraging ULTRA Tasks to serve relevant data from MDM to be consumed by various downstream
+					systems
+					and applications. Worked on a Python-based match engine that when configured for a certain
+					implemented MDM
+					system can intelligently merge a large number of potential matches by itself without any manual
+					intervention.
+				</p>
+			</section>
+			<section>
+				<header>
+					<h2>RedoQ</h2>
+					<p><i>Java Developer</i><br />
+						<span class="date">February 2015 - February 2016</span>
+					</p>
+				</header>
+				<p><i>Designed and developed platform-independent desktop applications using JavaFX.</i></p>
+				<p>
+					My job responsibilities involved understanding client requirements and breaking down program
+					specification into simpler elements and then translating that logic into code, designing (and
+					creating) the schemas based on business requirements and then utilizing them in the application,
+					installing the application(s) and conducting final testing.
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.poptrox.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+					The applications that I worked on include:
+				<ul>
+					<li>An ERP system that provides an integrated view of core business processes.</li>
+					<li>A POS (Point Of Sale) system which is integrated with both online and offline ordering systems.
+					</li>
+					<li>An HRM system for managing payroll of daily wage workers.</li>
+				</ul>
+				</p>
+			</section>
 
-	</body>
+		</section>
+
+		<section id="education">
+			<header class="major">
+				<h1>Education</h1>
+			</header>
+			<section>
+				<header>
+					<h2><a href="https://www.sxccal.edu/">St. Xavier's College, Kolkata</a></h2>
+					<p><b>Master of Science (M.Sc.) - Computer Science</b><br />
+						<span class="date">2011 - 2013</span>
+					</p>
+				</header>
+			</section>
+			<section>
+				<header>
+					<h2><a href="https://wbsu.ac.in/web/">West Bengal State University, Kolkata</a></h2>
+					<p><b>Bachelor of Science (B.Sc.) - Computer Science</b><br />
+						<span class="date">2008 - 2011</span>
+					</p>
+				</header>
+			</section>
+			<section>
+				<header>
+					<h2><a href="https://nielit.gov.in/index.php">NIELIT, Kolkata</a></h2>
+					<p><b>'O' Level (IT)</b><br />
+						<span class="date">2008 - 2010</span>
+					</p>
+				</header>
+			</section>
+		</section>
+
+		<section id="flairs">
+			<header class="major">
+				<h1>Flairs</h1>
+			</header>
+			<ul class="icons">
+				<li>
+					<img src="https://stackoverflow.com/users/flair/6042824.png" width="215" height="60"
+						alt="Profile for Bilesh Ganguly at Stack Overflow, Q&amp;A for professional and enthusiast programmers"
+						title="profile for Bilesh Ganguly at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+				</li>
+				<li>
+					<img src="https://stackexchange.com/users/flair/8011176.png" width="215" height="60"
+						alt="Profile for Bilesh Ganguly on Stack Exchange, a network of free, community-driven Q&amp;A sites"
+						title="profile for Bilesh Ganguly on Stack Exchange, a network of free, community-driven Q&amp;A sites">
+				</li>
+				<li>
+					<img src="https://www.codeabbey.com/index/user_banner/bileshganguly.png" width="215" height="60"
+						alt="CodeAbbey">
+				</li>
+				<li>
+					<img src="https://projecteuler.net/profile/bileshg.png" width="215" height="60" alt="Project Euler">
+				</li>
+			</ul>
+		</section>
+
+	</div>
+
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<ul class="icons">
+				<li><a href="https://www.linkedin.com/in/bilesh-ganguly/" class="icon brands fa-linkedin"><span
+							class="label">LinkedIn</span></a></li>
+				<li><a href="https://github.com/bileshg" class="icon brands fa-github"><span
+							class="label">Github</span></a></li>
+				<li><a href="https://stackoverflow.com/users/6042824/bilesh-ganguly"
+						class="icon brands fa-stack-overflow"><span class="label">StackOverflow</span></a></li>
+				<li><a href="https://stackexchange.com/users/8011176/bilesh-ganguly"
+						class="icon brands fa-stack-exchange"><span class="label">StackExchange</span></a></li>
+				<li><a href="https://trailblazer.me/id/imbilesh" class="icon brands fa-salesforce"><span
+							class="label">Salesforce</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.poptrox.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
