Added projects and posts section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 				<p>
 					Hi, I am <strong>Bilesh Ganguly</strong>, a <strong>Technology Lead</strong> with over <strong>9
 						years of experience</strong> in the IT
-					industry, currently specializing in the data integration domain. Throughout my career, I have worked
+					industry, currently specializing in the <strong>Data Integration</strong> domain. Throughout my
+					career, I have worked
 					on a wide
 					variety of projects and have gained proficiency in various tools such as SnapLogic, Salesforce, and
 					Reltio.
@@ -177,6 +178,69 @@
 			</section>
 		</section>
 
+		<section id="Projects">
+			<header class="major">
+				<h1>Projects</h1>
+			</header>
+			<section>
+				<header>
+					<h2>Data Foundation</h2>
+					<p><span class="date">April 2016 - Present</span>
+					</p>
+				</header>
+				<p>As organizations and companies expand, they often adopt disparate software solutions and systems to
+					meet their evolving
+					needs. Over time, these numerous systems, which may not be inherently designed to work together, can
+					end up with
+					conflicting and sometimes outdated information. The primary goal in this scenario is to develop a
+					Master Data
+					Management (MDM) solution that serves as a centralized repository or the single source of truth.
+					This centralized
+					system will enable various applications and downstream systems to access accurate and up-to-date
+					data.
+				</p>
+				<p>To achieve this, our approach involved several key steps. Initially, we develop data schemas building
+					upon our
+					out-of-the-box industry-specific configurations that align with the specific business requirements,
+					ensuring that the
+					data structure fulfills the requirements. Following this, we configure the chosen master data
+					management platform to
+					align with these predefined schemas. Once the configuration is in place, we migrate data from legacy
+					systems into the
+					MDM and build integrations from upstream (source) systems to the MDM. Once the MDM is populated we
+					analyze the data and
+					implement matching and merging strategies into the MDM platform.
+				</p>
+				<p>In addition to setting up the MDM, we focus on the crucial aspect of data integration and automation.
+					We design and
+					develop robust solutions for ingesting data into the MDM platform and extracting data from it. These
+					data integration
+					solutions ensure seamless flow and synchronization of data between the MDM system and other
+					applications or systems
+					within the organization, thereby supporting the overall data consistency and reliability across the
+					enterprise.
+				</p>
+			</section>
+		</section>
+
+		<section id="Posts">
+			<header class="major">
+				<h1>Posts</h1>
+			</header>
+			<section>
+				<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7161899802748706816" height="880"
+					frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+			</section>
+			<section>
+				<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7160145728999219201" height="820"
+					frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+			</section>
+			<section>
+				<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7068048976012341249" height="775"
+					frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+			</section>
+		</section>
+
 		<section id="flairs">
 			<header class="major">
 				<h1>Flairs</h1>
@@ -202,6 +266,7 @@
 			</ul>
 		</section>
 
+
 	</div>
 
 	<!-- Footer -->
@@ -216,6 +281,12 @@
 						class="icon brands fa-stack-overflow"><span class="label">StackOverflow</span></a></li>
 				<li><a href="https://stackexchange.com/users/8011176/bilesh-ganguly"
 						class="icon brands fa-stack-exchange"><span class="label">StackExchange</span></a></li>
+				<li><a href="https://www.hackerrank.com/profile/bileshg" class="icon brands fa-hackerrank"><span
+							class="label">Hackerrank</span></a></li>
+				<li><a href="https://replit.com/@BileshGanguly" class="icon brands fa-python"><span class="label">Python
+							Projects on Replit</span></a></li>
+				<li><a href="https://www.kaggle.com/bileshganguly" class="icon brands fa-kaggle"><span
+							class="label">Kaggle</span></a></li>
 				<li><a href="https://trailblazer.me/id/imbilesh" class="icon brands fa-salesforce"><span
 							class="label">Salesforce</span></a></li>
 			</ul>
